# expense-tracker

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  worker.py  wrangler.jsonc  wrangler.toml.example
app/: main.py  seed.py  worker.py
app/api/: deps.py
app/api/routes/: auth.py  imports.py  months.py  reports.py  settings.py  spend_categories.py  transactions.py
app/core/: config.py  database_url_crypto.py  security.py
app/db/: session.py
app/models/: __init__.py  app_settings.py  import_batch.py  merchant_rule.py  monthly_report.py  spend_category.py  transaction.py  user.py
app/schemas/: imports.py  report.py  settings.py  spend_category.py  transaction.py
app/scripts/: __init__.py  encrypt_db_url.py  init_db.py
app/services/: imports.py  merchant_rules.py  reports.py
app/services/parsers/: __init__.py  bank_statement.py  base.py  credit_card.py  normalize.py  upi.py
docs/deployment/: cloudflare-workers.md
docs/superpowers/plans/: 2026-04-18-expense-tracker.md  2026-05-01-backend-helm-chart.md  (+1 more)
frontend/: Dockerfile  jest.config.cjs  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: main.tsx  styles.css  vite-env.d.ts
helm/expense-tracker-backend/: Chart.yaml  values.yaml
helm/expense-tracker-frontend/: Chart.yaml  values.yaml
tests/backend/: conftest.py  pdf_factory.py  test_auth.py  test_bank_statement_parser.py  test_cors.py  test_credit_card_parser.py  test_database_url_encryption.py  test_db_migrations.py  test_env_config_files.py  test_imports.py  test_manual_transactions.py  test_months.py  test_normalize_transactions.py  test_phonepe_upi_parser.py  test_reports.py  test_review_queue.py  test_settings.py  test_spend_categories.py  test_transactions_listing.py  test_upi_parser.py  test_workers_packaging_metadata.py  test_workers_runtime.py
(+43 files in other folders)
